--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,10 @@
     <string name="app_name">Test Jetpack</string>
     <string name="loadingWithThreeDots">Loading…</string>
 
+    // GitRepoSearch
+    <string name="search">Search</string>
+
+    // My Profile
     <string name="hint_email">Email Address</string>
     <string name="hint_phone">Phone Number</string>
     <string name="add">Add</string>
