--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,10 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation menu</string>
 
-    // Location
-    <string name="location_listener_state">state</string>
+    // Gps
+    <string name="location_listener_started">Listener Started</string>
+    <string name="location_listener_stopped">Listener Stopped</string>
+    <string name="location_listener_start">Start</string>
+    <string name="location_listener_stop">Stop</string>
 
 </resources>
