--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
 
 
     // GitRepoSearch
+    <string name="hint_repo_to_search">repo to search</string>
     <string name="search">Search</string>
 
     // My Profile
@@ -33,8 +34,6 @@
     <string name="gps_diagnostic_switch">diagnostic</string>
     <string name="no_value">none</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_maps">Map</string>
 
 </resources>
