added viewpager change page animations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,10 @@
     <string name="acceleration__">acceleration (m/c²):</string>
     <string name="satellites__">satellites:</string>
 
+    // My Status
+    <string name="my_status_previous">PREVIOUS</string>
+    <string name="my_status_next">NEXT</string>
+    <string name="my_status_finish">FINISH</string>
+
 
 </resources>
