--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="loadingWithThreeDots">Loading…</string>
     <string name="retryWithThreeDots">Retry…</string>
 
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
 
     // GitRepoSearch
     <string name="hint_repo_to_search">repo to search</string>
@@ -57,6 +59,5 @@
     <string name="my_status_previous">PREVIOUS</string>
     <string name="my_status_next">NEXT</string>
     <string name="my_status_finish">FINISH</string>
-
 
 </resources>
