added Splash Screen Animation added SignIn Screen navigation & actions fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,5 +83,6 @@
     <string name="my_status_previous">PREVIOUS</string>
     <string name="my_status_next">NEXT</string>
     <string name="my_status_finish">FINISH</string>
+    <string name="dot">.</string>
 
 </resources>
